--- a/sium_notification/.gitignore
+++ b/sium_notification/.gitignore
@@ -47,8 +47,8 @@ analysis_benchmark.json
 # Flutter/Dart/Pub related
 **/doc/api/
 .dart_tool/
-.flutter-plugins
-.flutter-plugins-dependencies
+**/.flutter-plugins
+**/.flutter-plugins-dependencies
 **/generated_plugin_registrant.dart
 .packages
 .pub-cache/
