--- a/sium_notification/pubspec.yaml
+++ b/sium_notification/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   firebase_analytics: ^8.3.4
   firebase_crashlytics: ^2.3.0
   firebase_messaging: ^11.2.4
+  firebase_auth: ^3.3.17
 
   # Local Notifications
   flutter_local_notifications: ^9.1.5
