--- a/sium_notification/android/app/src/main/AndroidManifest.xml
+++ b/sium_notification/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bruzzers.sium_notification">
+    
+    <uses-permission android:name="android.permission.USE_BIOMETRIC"/>
    <application
         android:label="SIUUUUM"
         android:name="${applicationName}"
