--- a/sium_notification/pubspec.yaml
+++ b/sium_notification/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   firebase_messaging: ^11.2.4
   firebase_auth: ^3.3.17
   google_sign_in: ^5.3.0
+  local_auth: ^2.0.1
 
   # Local Notifications
   flutter_local_notifications: ^9.1.5
