--- a/sium_notification/pubspec.yaml
+++ b/sium_notification/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   firebase_crashlytics: ^2.3.0
   firebase_messaging: ^11.2.4
   firebase_auth: ^3.3.17
+  cloud_firestore: ^3.1.14
   google_sign_in: ^5.3.0
   local_auth: ^2.0.1
 
