--- a/sium_notification/android/app/src/main/AndroidManifest.xml
+++ b/sium_notification/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
     package="com.bruzzers.sium_notification">
     
     <uses-permission android:name="android.permission.USE_BIOMETRIC"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
    <application
         android:label="SIUUUUM"
         android:name="${applicationName}"
