--- a/sium_notification/ios/Runner/Info.plist
+++ b/sium_notification/ios/Runner/Info.plist
@@ -30,6 +30,10 @@
 	<string>Main</string>
 	<key>NSFaceIDUsageDescription</key>
     <string>Why is my app authenticating using face id?</string>
+    <key>NSCameraUsageDescription</key>
+    <string>To capture profile photo please grant camera access</string>
+   	<key>NSPhotoLibraryUsageDescription</key>
+   	<string>App needs access to photo lib for profile images</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
