--- a/sium_notification/pubspec.yaml
+++ b/sium_notification/pubspec.yaml
@@ -69,11 +69,15 @@ dependencies:
   cloud_firestore: ^3.1.14
   google_sign_in: ^5.3.0
   local_auth: ^2.0.1
+  firebase_storage: ^10.2.16
 
   # Local Notifications
   flutter_local_notifications: ^9.1.5
 
   permission_handler: ^8.2.6
+
+  #image picker
+  image_picker: ^0.8.5+3
 
   # Plays json animations from after effects
   lottie: ^1.2.1
