--- a/sium_notification/pubspec.yaml
+++ b/sium_notification/pubspec.yaml
@@ -72,7 +72,7 @@ dependencies:
   firebase_storage: ^10.2.16
 
   # Local Notifications
-  flutter_local_notifications: ^9.1.5
+  flutter_local_notifications: ^9.5.3+1
 
   permission_handler: ^8.2.6
 
