--- a/sium_notification/pubspec.yaml
+++ b/sium_notification/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
 
   # Route navigation
   get: ^4.3.8
+  encrypted_shared_preferences: ^3.0.0
 
   # Firebase
   firebase_core: ^1.10.0
