manage profile image in notification list

--- a/sium_notification/pubspec.yaml
+++ b/sium_notification/pubspec.yaml
@@ -83,6 +83,9 @@ dependencies:
   # Plays json animations from after effects
   lottie: ^1.2.1
 
+   # Power Manager
+  android_power_manager: ^1.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
