--- a/sium_notification/android/app/src/main/AndroidManifest.xml
+++ b/sium_notification/android/app/src/main/AndroidManifest.xml
@@ -29,6 +29,9 @@
             <meta-data
                 android:name="io.flutter.embedding.android.SplashScreenDrawable"
                 android:resource="@drawable/launch_background" />
+            <meta-data
+                android:name="com.google.firebase.messaging.default_notification_channel_id"
+                android:value="SiumNotification" />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
