--- a/sium_notification/pubspec.yaml
+++ b/sium_notification/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   # Route navigation
   get: ^4.3.8
   encrypted_shared_preferences: ^3.0.0
+  shared_preferences: ^2.0.15
 
   # Firebase
   firebase_core: ^1.10.0
