--- a/sium_notification/pubspec.yaml
+++ b/sium_notification/pubspec.yaml
@@ -113,6 +113,7 @@ flutter:
     - assets/translations/
     - assets/lottie_animations/
     - assets/images/
+    - assets/sounds/
 
   fonts:
     - family: Source Code Pro
