--- a/sium_notification/android/local.properties
+++ b/sium_notification/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=/Users/bruzzonema/Library/Android/sdk
 flutter.sdk=/Users/bruzzonema/Developer/flutter
-flutter.buildMode=debug
-flutter.versionName=1.0.1
-flutter.versionCode=2
+flutter.buildMode=release
+flutter.versionName=1.0.2
+flutter.versionCode=3
